# next-download-manager

./: Cargo.toml  README.md
docs/: README.md
docs/architecture/: components.md  concurrency.md  overview.md
docs/concepts/: download-handle.md  download-manager.md  events.md  request-builder.md  scheduler.md
docs/mutability/: patterns.md  why-mutable.md
docs/use-cases/: basic-downloads.md  batch-downloads.md  cancellation.md  progress-tracking.md  retry-handling.md
examples/: enqueue_many.rs  usage.rs
src/: context.rs  download.rs  download_manager.rs  error.rs  events.rs  request.rs  scheduler.rs  worker.rs
src/backend/: error.rs  mod.rs  reqwest_backend.rs
